Mise à jour du fichier

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a href="#">Consultez mon blog</a>
       </li>
       <li class="social__media twitter">
-        <i class="fab fa-twitter"></i>
-        <a href="#">Suivez moi sur Twitter</a>
+        <i class="fa-brands fa-x-twitter"></i>
+        <a href="#">Suivez-moi sur X</a>
       </li>
       <li class="social__media linkedin">
         <i class="fab fa-linkedin-in"></i>
